--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="logo">120dp</dimen>
     <dimen name="h1">24sp</dimen>
+    <dimen name="padding">16dp</dimen>
+    <dimen name="content">250dp</dimen>
 </resources>
